qbittorrent/values/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 6881
              protocol: TCP
            - containerPort: 6881
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "2Gi"
              cpu: "2"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: data
          persistentVolumeClaim:
            claimName: qbittorrent-data-pvc
