qbittorrent/values/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-lb
  namespace: media
spec:
  selector:
    app: qbittorrent
  ports:
    - name: torrent-tcp
      port: 6881
      targetPort: 6881
      protocol: TCP
    - name: torrent-udp
      port: 6881
      targetPort: 6881
      protocol: UDP
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  selector:
    app: qbittorrent
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
